testbed/microservice_replication/framework/yamls-to-apply/productcatalogservice-apply/productcatalogservice-netpol-3-checkoutservice-4.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: productcatalogservice-3-allow-checkoutservice-4
  namespace: attack-graphs
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: checkoutservice-4
    ports:
    - port: 32537
  podSelector:
    matchLabels:
      app: productcatalogservice-3
